src/app/components/team/team.component.scss
.section-team {
    border-top: solid 1px rgb(131, 131, 131);
}

.content-card {
    width: 630px;
}

.content-card > img {
    width: 250px;
    height: 250px;
    border-radius: 5px;
}

.text-card {
    width: 300px;
}

@media screen and (min-width: 768px) and (max-width: 1199px) {
    .second-content {
        flex-direction: column;
        align-items: center;
    }
}

@media screen and (max-width: 770px) {
    .second-content {
        flex-direction: column;
        align-items: center;
    }
    .content-card {
        flex-direction: column;
        align-items: center;
    }
    .content-card > img {
        width: 300px;
        height: 300px;
    }
    .text-card {
        margin-top: 20px;
    }
}

